# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  demo.cast  file1.json  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  my_workflow.yml
gendiff/: __init__.py
gendiff/formatters/: format_identifier.py  json_formatter.py  plain_formatter.py  stylish.py  stylish_formatter.py
gendiff/modules/: gendiff.py  parse_files.py
gendiff/scripts/: find_diff.py  gendiff.py  gendiff_script.py  generate_diff.py  parser.py
tests/: test_gendiff.py  test_generate_diff.py
tests/test_data/: expected_result_json_format.txt  file1.yaml  result_json.json  results.py
