[project]
name = "hexlet-code"
version = "0.1.0"
description = "differences generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.8.0",
    "pytest-cov>=6.1.1",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"
